<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="help_dialog_para_1">Thank you for using NetLive. If you have any questions, recommendations, or you run into a problem with the app, please do not hesitate to contact me
			 		by going to the \"Send Feedback\" option in the menu. Enjoy!</string>
    <string name="welcome_para">If you have any questions, recommendations, or you run into a problem with the app, please do not hesitate to contact me
			 		by going to the \"Send Feedback\" option in the menu. Enjoy!</string>
    <string name="help_dialog_para_2">NetLive allows you to monitor your internet data transfer rate while also showing the app that is using the most data at the current moment. It runs both in the notification drawer or as a widget, so you always have access to your transfer rate information.</string>
    <string name="help_dialog_para_3">NetLive uses the official International System of Units (SI). This means, for example, that a kilobit is considered 1000 bits, not 1024 bits.</string>
    <string name="welcome">NetLive is now running in your notification drawer, welcome to the revolution!\n\n</string>
    <string name="battery_life_help_title">Battery Life Issues</string>
    <string name="battery_life_help_advice">Increasing the poll rate to 5 seconds or greater will help most. Alternatively, you can disable the active app feature.  If this still does not help, go to the "Send Feedback" option in the menu and let me know so we can work this out.</string>

    <string name="app_name" translatable="false">NetLive</string>
    <string name="app_name_with_version_number" translatable="false">NetLive v3.3.2</string>
    <string name="action_settings_help">Help</string>
    <string name="action_settings_about">About</string>
    <string name="action_settings_send_feedback">Send Feedback</string>
    <string name="negative_option_for_rate_app_dialog">Dismiss</string>
    <string name="positive_option_for_rate_app_dialog">Rate NetLive</string>
    <string name="app_uri_for_google_play" translatable="false">market://details?id=com.richardlucasapps.netlive</string>
    <string name="app_url_if_uri_fails" translatable="false">https://play.google.com/store/apps/details?id=com.richardlucasapps.netlive&amp;hl=en</string>
    <string name="netlive_share_body">Monitor your internet transfer rate in real time with NetLive by @dickclucas</string>
    <string name="rate_app_dialog_explanation">Enjoy NetLive? I would really appreciate if you took a moment to rate it :)</string>
    <string name="rate_app_dialog_title">Rate NetLive</string>
    <string name="could_not_open_app_in_Google_play">Could not open Google Play</string>
    <string name="enable_active_app_feature_jelly_bean_mr2">This feature may not work due to a bug in this version of Android (4.3). Check the help section in the menu for details.</string>
    <string name="welcome_message_dismiss" translatable="false">Ok</string>
    <string name="welcome_message_message">Welcome to</string>
    <string name="action_settings_rate_netlive">Rate NetLive</string>
    <string name="action_settings_share">Share</string>
    <string name="share_via">Share via</string>
    <string name="general_category">General</string>
    <string name="pref_title_show_total_value">Show total value</string>
    <string name="pref_summary_show_total_value">Show total speed beside upload and download speeds.</string>
    <string name="pref_summary_hide_notification">Hide NetLive notification icon from displaying in the status bar. This will hide upload and download arrows from displaying that can show you at a glance info in the status bar.</string>
    <string name="pref_title_hide_notification">Hide notification icon</string>
    <string name="general_category_start_on_boot">Start on boot</string>
    <string name="pref_summary_auto_start">Prevent all transfer rate reporting in the notification area (widgets must be deleted manually).</string>
    <string name="pref_title_auto_start">Disable</string>
    <string name="notification_drawer_category">General</string>
    <string name="show_love_category_name">General</string>
    <string name="pref_title_measurement_unit">Unit of measure</string>
    <string name="pref_measurement_unit_summary" translatable="false"></string>
    <string name="pref_dialog_title_choose_measurement_unit">Choose measurement unit</string>
    <string name="pref_measurement_unit_default_value" translatable="false">Auto (Kbps, Mbps, Gbps)</string>
    <string name="pref_summary_show_mesurement_units">Display unit of measure beside transfer rates</string>
    <string name="pref_title_show_mesurement_units">Display unit of measure</string>
    <string name="pref_title_values_to_display">Display transfer rates</string>
    <string name="pref_screen_displayed_values_summary">Choose which transfer rates are displayed</string>
    <string name="pref_summary_show_measurement_unit_upload">Display upload transfer rate</string>
    <string name="pref_title_show_measurement_unit_upload">Upload</string>
    <string name="pref_summary_show_measurement_unit_download">Display download transfer rate</string>
    <string name="pref_title_show_measurement_unit_download">Download</string>
    <string name="pref_summary_show_measurement_unit_total">Display total transfer rate</string>
    <string name="pref_title_show_measurement_unit_total">Total</string>
    <string name="pref_summary_transfer_rate_names">Display total, upload, and download beside transfer rate</string>
    <string name="pref_title_transfer_rate_names">Display transfer rate label</string>
    <string name="notification_area_category">Notification area (notification bar)</string>
    <string name="pref_title_display_in_notification_area">Display transfer rate</string>
    <string name="pref_summary_display_in_notification_area">Display transfer rate in the notificaiton area</string>
    <string name="pref_measurement_unit_default_value_notification_area" translatable="false">Auto (Kbps, Mbps, Gbps)</string>
    <string name="pref_title_active_app">Display active app</string>
    <string name="pref_summary_active_app">Display the name of the app currently using the most data. Enabling this feature may increase battery usage.</string>
    <string name="pref_summary_active_app_jelly_bean_mr2">Display the name of the app currently using the most data. Enabling this feature may increase battery usage. Looks like you are running Android 4.3, this feature may not work due to a bug in this version of Android. Check the help section in the menu for details.</string>
    <string name="pref_widget_category_general">General Widget Settings</string>
    <string name="pref_widget_display_unit_of_measure_title">Display Unit of Measure</string>
    <string name="pref_widget_display_unit_of_measure_summary">Display unit of measure above transfer rates</string>
    <string name="pref_widget_category_font">Font</string>
    <string name="pref_widget_title_font_style">Style</string>
    <string name="pref_widget_summary_font_style">Choose font style</string>
    <string name="pref_widget_dialog_font_style">Choose font style</string>
    <string name="pref_widget_title_font_size">Size</string>
    <string name="pref_widget_summary_font_size">Choose font size</string>
    <string name="pref_widget_dialog_font_size">Choose font size</string>
    <string name="pref_widget_title_font_color">Color</string>
    <string name="pref_widget_summary_font_color">Choose predefined font color</string>
    <string name="pref_widget_dialog_font_color">Choose font color</string>
    <string name="pref_title_poll_rate">Poll Rate</string>
    <string name="pref_summary_poll_rate">Choose how often in seconds NetLive updates, shorter poll rates increase battery usage (controls widgets too).</string>
    <string name="pref_dialog_title_poll_rate">Choose poll rate</string>
    <string name="widget_font_size_default_value" translatable="false">12</string>
    <string name="pref_key_poll_rate_default_value" translatable="false">5</string>
    <string name="poll_rate_warning">Setting a poll rate below 5 seconds may hurt battery life. 5 seconds offers a good balance.</string>
    <string name="help_dialog_android_jelly_bean_mr2_title">Android 4.3 Bug</string>
    <string name="help_dialog_android_jelly_bean_mr2_body">The methods in the Android SDK which
        give you info on how much data an individual app is using, do not work in Android 4.3.
        If you have a 4.3 device, you can easily tell if it is working or not by enabling the
        active app feature, and then checking if an app title ever appears.  If it does, that means
        it is working, if it simply shows this \"(...)\" all the time, then your device has the bug.
        These methods may work on some devices with Android 4.3, but they certainly do not
        work on the majority of 4.3 devices. I filed a bug report with the Android Open Source
        Project and it is a confirmed issue. You can view the bug report here: \n</string>
    <string name="android_jelly_bean_mr2_issue_url" translatable="false">https://code.google.com/p/android/issues/detail?id=58210</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback:</string>
    <string name="ok">Ok</string>
    <string name="heading_version_code">Version Code:</string>
    <string name="about">About</string>
    <string name="overview">Overview</string>

</resources>
