<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings_rate_netlive"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_settings_rate_netlive" />

    <item
        android:id="@+id/action_settings_share"
        android:orderInCategory="51"
        android:showAsAction="never"
        android:title="@string/action_settings_share" />

    <item
        android:id="@+id/action_settings_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_help" />

    <item
        android:id="@+id/action_settings_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings_about" />
    <item
        android:id="@+id/action_settings_send_feedback"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_settings_send_feedback" />



</menu>
